--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ header{
     text-align: center;
     box-shadow: 0px 0px 0px rgba(0,0,0,0.1);
     border-radius: 5px;
-    width:300px;
+    width:600px;
 
 }
 .menu-item img{
@@ -33,8 +33,10 @@ header{
 }
 .price{
     font-weight: bold;
-    color: #ff5722;
+    color: crimson;
     font-size: 1.2rem;
+    background-color: #f2f2f2;
+    border-radius: 6px;
 }
 span{
     color:#83E8BA;
